<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TestList</string>
    <string name="hello_world">111111</string>
    <string name="menu_settings">123</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="main">总览</string>
    <string name="dynamic">报警</string>
    <string name="message">监测</string>
    <string name="person">设置</string>
    <string name="nulltext_refreash">无数据！</string>
    <string name="action_settings">Settings</string>
    <string name="auth_option">Gateway Authenticate Option:</string>
    <string name="auth_use_input">Manual Input</string>
    <string name="use_appvpn">Use AppVPN</string>
    <string name="auth_unified_account">Unified Account</string>
    <string name="auth_option_background">Auth in background</string>
    <string name="auth_option_foreground">Auth in foreground</string>
    <string name="auth_option_checkbind">Login with checkbind</string>
    <string name="auth_option_tunnel">Login with tunnel</string>
    <string name="auth_no_tunnel">No need L4VPN:</string>
    <string name="auth_gateway">Gateway:</string>
    <string name="auth_username">Username:</string>
    <string name="auth_password">Password:</string>
    <string name="auth_tunnelip">Tunnel IP:</string>
    <string name="auth_authenticate">Authenticate</string>
    <string name="encrypt_decrypt">Encrypt/Decrypt</string>
    <string name="auth_connecting">Authenticating</string>
    <string name="auth_tunnel_online">Tunnel online!</string>
    <string name="auth_tunnel_offline">Tunnel offline, error code:%d!</string>
    <string name="auth_success">You have authenticated successfully!</string>
    <string name="auth_fail">Authenticate failed!</string>
    <string name="auth_btn_check_update">Check Update</string>
    <string name="auth_btn_enter">Enter</string>
    <string name="go">GO</string>
    <string name="back">Back</string>
    <string name="menu">Menu</string>
    <string name="menu_http_test">HTTP Test</string>
    <string name="menu_encrypt_decrypt_test">Encrypt/Decrypt Test</string>
    <string name="menu_mdm_test">MDM Test</string>
    <string name="menu_log_test">SDK Log Test</string>
    <string name="menu_wifi_test">WiFi Config Test</string>
    <string name="menu_speed">Speed Test</string>
    <string name="menu_checkbind_test">CheckBind Test</string>
    <string name="menu_checknettype_test">Get Network Type Test</string>
    <string name="urlconnection">URLConnection</string>
    <string name="httpclient">HttpClient</string>
    <string name="webview">WebView</string>
    <string name="sdkwebview">SDKWebView</string>
    <string name="webapp">WebApp</string>
    <string name="guide">Guide</string>
    <string name="socket_tcp">SvnSocket TCP Test</string>
    <string name="svn_socket">SvnSocket</string>
    <string name="svn_socket_connect">Connect</string>
    <string name="tcp_test">Detect TCP</string>
    <string name="http_nav_login"> &#160;&#160;Login&#160;</string>
    <string name="http_nav_userinfo">UserInfo</string>
    <string name="http_nav_download">Download</string>
    <string name="http_nav_upload">&#160;Upload&#160;</string>
    <string name="http_http">URL:</string>
    <string name="http_host">Host:</string>
    <string name="http_port">Port:</string>
    <string name="http_content">Content:</string>
    <string name="http_timeout">Timeout:</string>
    <string name="http_subhttp">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="http_login_name">Name:</string>
    <string name="http_login_password">Password:</string>
    <string name="http_request">Request:</string>
    <string name="http_response">Response:</string>
    <string name="http_login">Login</string>
    <string name="http_download_filename">FileName:</string>
    <string name="download_ok">Download Success</string>
    <string name="download_error">Download failed</string>
    <string name="userinfo">UserInfo</string>
    <string name="http_userinfo_username">UserName:</string>
    <string name="http_userinfo_lastlogintime">Last&#160;Login&#160;Time:</string>
    <string name="download">Download</string>
    <string name="ing">ing..</string>
    <string name="upload">Upload</string>
    <string name="browse">Browse</string>
    <string name="input">Input Text</string>
    <string name="output">Output Text</string>
    <string name="http_upload_filepath">FilePath:</string>
    <string name="file_encrypt_decrypt">File Encrypt/Decrypt</string>
    <string name="data_encrypt_decrypt">Data Encrypt/Decrypt</string>
    <string name="svn_random_access_file">RandomAccessFile</string>
    <string name="use_sqlite">Use&#160;SQLite</string>
    <string name="use_clipboard">Clipboard Test</string>
    <string name="result">Results</string>
    <string name="checking">Checking</string>
    <string name="mdm_check">MDM Check</string>
    <string name="mdm_check_success">MDM Check Success</string>
    <string name="mdm_check_false">MDM Check False</string>
    <string name="upload_log">Upload</string>
    <string name="uploading">Uploading</string>
    <string name="log_upload">SDK Upload Log</string>
    <string name="upload_success">Upload Success</string>
    <string name="upload_false">Upload False, error code is:%1$d</string>
    <string name="config_checkbind">CheckBind</string>
    <string name="CheckBindStart">CheckBind</string>
    <string name="checkbinding">Checkbinding</string>
    <string name="checkbind_success">CheckBind Success, the device is already bound</string>
    <string name="checkbind_false">CheckBind Fail, error code is:%1$d</string>
    <string name="config_checknettype">Get Network Type</string>
    <string name="CheckNetTypeStart">Get Type</string>
    <string name="checknettype_result">Get access address type is:%1$s</string>
    <string name="config_wifi">WiFi config</string>
    <string name="configing">Configing</string>
    <string name="finish">Config finish</string>
    <string name="speed_compare">Speed Compare</string>
    <string name="menu_speed_test">Speed Test</string>
    <string name="speed_inner_net">INNER</string>
    <string name="speed_outer_net">OUTER</string>
    <string name="speed_outer_site">网址：</string>
    <string name="speed_curr_site">访问：</string>
    <string name="file_encrypt_decrypt_title">File&#160;En/Decrypt</string>
    <string name="data_encrypt_decrypt_title">Data&#160;En/Decrypt</string>
    <string name="encrypt_decrypt_file">File:</string>
    <string name="original_path">Original&#160;Path:</string>
    <string name="encrypt_path">Encrypt&#160;Path:</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="file_browser">File Browser</string>
    <string name="open_no_soft">please install soft to open the file.</string>
    <string name="encrypt_success">Encrypt&#160;success!</string>
    <string name="decrypt_success">Decrypt&#160;success!</string>
    <string name="view_file">View&#160;File</string>
    <string name="clipboard_title">Clipboard Test</string>
    <string name="clipboard_use_custom">Use SDKClipboard:</string>
    <string name="clipboard_use_system">Use System Clipboard:</string>
    <string name="sqlite_name">Name:</string>
    <string name="sqlite_age">Age:</string>
    <string name="insert">Insert</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="query">Query</string>
    <string name="sqlite_item_id">ID:</string>
    <string name="sqlite_item_name">,Name:</string>
    <string name="sqlite_item_age">,Age:</string>
    <string name="sqlite_result">Result:</string>
    <string name="insert_success">Insert Success</string>
    <string name="insert_false">Insert failed</string>
    <string name="delete_success">Delete Success</string>
    <string name="delete_false">Delete failed,Please select one item in list.</string>
    <string name="update_success">Update Success</string>
    <string name="update_false">Update failed,Please select one item in list.</string>
    <string name="query_success">Query Success</string>
    <string name="query_false">Query failed</string>
    <string name="error_tunnel_already_online">Tunnel is already online now!</string>
    <string name="error_tunnel_already_offline">Tunnel is already offline now!</string>
    <string name="faq_question_title">Q:</string>
    <string name="faq_answer_title">A:</string>
    <string name="inner">内网</string>
    <string name="outer">外网</string>
    <string name="sdk_mode">Mode:</string>
    <string name="l4vpn_mode">L4VPN + Sandbox</string>
    <string name="appvpn_mode">App VPN + Sandbox</string>
    <string name="sandbox_mode">Sandbox only</string>
    <string name="goto_authenticate">Go</string>
    <string name="title_activity_sdkauthentication">SDKAuthenticationActivity</string>
    <string name="gateway_address">192.168.11.32</string>
    <string name="username">1</string>
    <string name="password">1</string>
    <string name="permissionNotAllowed">未开启必要权限，应用将退出！</string>
    <string name="title_activity_check_bind">CheckBindActivity</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="mobilenumber_hint">手机号只能以“+”或数字开头第二位开始只能包含“-”和数字</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="mobilenumber_empty_guide">手机号为空将清除之前设置的手机号</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="mp.list.layoutManager.linear" tools:ignore="ExtraTranslation">LinearLayoutManager</string>
    <string name="mp.cancel" tools:ignore="ExtraTranslation">取消</string>
    <string name="mp.Confirm" tools:ignore="ExtraTranslation">确认</string>
    <string name="mp.fragment.title.play_list" tools:ignore="ExtraTranslation">播放列表</string>
    <string name="mp.fragment.title.music" tools:ignore="ExtraTranslation">音乐</string>
    <string name="mp.fragment.title.local_files" tools:ignore="ExtraTranslation">本地音乐</string>
    <string name="mp.fragment.title.settings" tools:ignore="ExtraTranslation">设置</string>
    <string name="mp.activity.title.file_system" tools:ignore="ExtraTranslation">SD卡</string>
    <string name="mp.play_list.favorite" tools:ignore="ExtraTranslation">收藏</string>
    <string name="mp.play_list.footer.add" tools:ignore="ExtraTranslation">添加播放列表</string>
    <string name="mp.play_list.footer.end_summary_formatter" tools:ignore="ExtraTranslation">总共有 %d 个播放列表</string>
    <string name="mp.play_list.create" tools:ignore="ExtraTranslation">创建播放列表</string>
    <string name="mp.play_list.created" tools:ignore="ExtraTranslation">创建 %s </string>
    <string name="mp.play_list.edit" tools:ignore="ExtraTranslation">编辑播放列表</string>
    <string name="mp.play_list.dialog.hint" tools:ignore="ExtraTranslation">播放列表名称</string>
    <string name="mp.play_list.dialog.add_to" tools:ignore="ExtraTranslation">添加至播放列表</string>
    <plurals name="mp_play_list_items_formatter">
        <item quantity="one">%d 首歌</item>
        <item quantity="other">%d 首歌</item>
    </plurals>
    <string name="mp.play_list.details.empty" tools:ignore="ExtraTranslation">没有音乐，去添加一些吧!</string>
    <string name="mp.play_list.details.footer.end_summary_formatter" tools:ignore="ExtraTranslation">总共有 %d 首歌</string>
</resources>