<!--
  ~ Copyright 2015 Huawei Technologies Co., Ltd. All rights reserved.
  ~ eSDK is licensed under the Apache License, Version 2.0 ^(the "License"^);
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~         http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/layout.title">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            style="@style/tv.btn"
            android:text="@string/back"
            android:layout_alignParentLeft="true"
            android:id="@+id/btn_http_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/urlconnection"
            android:layout_centerHorizontal="true"
            style="@style/tv.btn_nor"
            android:id="@+id/tv_http_title" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/guide"
            style="@style/tv.btn"
            android:layout_alignParentRight="true"
            android:id="@+id/btn_http_guide" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/bg_navigate_normal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/http_nav_login"
            style="@style/tv.smallbtn"
            android:id="@+id/btn_http_nav_login" />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/http_nav_seq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/http_nav_userinfo"
            style="@style/tv.smallbtn"
            android:id="@+id/btn_http_nav_userinfo" />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/http_nav_seq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/http_nav_download"
            style="@style/tv.smallbtn"
            android:id="@+id/btn_http_nav_download" />

        <TextView
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/http_nav_seq" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/http_nav_upload"
            style="@style/tv.smallbtn"
            android:id="@+id/btn_http_nav_upload" />
    </LinearLayout>

    <androidx.core.view.ViewPager
        android:id="@+id/vp_http"
        android:layout_width="fill_parent"
        android:layout_height="400dp"></androidx.core.view.ViewPager>


</LinearLayout>